Chore: Fix horizontal scrollbars when unbreakable URLs are present

--- a/packages/extension-browser/src/devtools/views/controls/source-code.css
+++ b/packages/extension-browser/src/devtools/views/controls/source-code.css
@@ -8,7 +8,7 @@
     font-size: 12px; /* rem units are incorrect here at runtime?!? */
     margin: 0.375rem 0; /* 6px 0 */
     overflow-x: auto;
-    overflow-wrap: break-word;
+    word-break: break-word;
     padding: 1rem; /* 16px */
     white-space: pre-wrap;
 }
