--- a/packages/extension-browser/src/devtools/views/pages/results/problem.css
+++ b/packages/extension-browser/src/devtools/views/pages/results/problem.css
@@ -13,9 +13,9 @@
 
 .problemLink {
     color: var(--link-alt-color);
-    overflow-wrap: break-word;
     text-decoration: none;
     vertical-align: middle;
+    word-break: break-all;
 }
 
 .problemLink:focus {
